# FirstOrderOptim

./: .gitignore  main.py  notebook.ipynb  pyproject.toml  readme.md  trainer.py
experiments/: linear_dense.py  linear_sparse.py  test_function.py
losses/: mse.py
models/: linear_model.py  test_functions.py
optimizers/: NesterovMomentum.py  SGD.py  adagrad.py  base.py  gradient_descent.py  momentum.py
schedulers/: baseScheduler.py  decayRateScheduler.py  exponentialDecayScheduler.py  stepDecayScheduler.py
src/first_order_optim.egg-info/: SOURCES.txt
src/first_order_optim/experiments/: linear_dense.py  linear_sparse.py  test_function.py
src/first_order_optim/loss/: __init__.py  base.py  mse.py
src/first_order_optim/model/: __init__.py  base.py  linear_model.py  test_functions.py
src/first_order_optim/optimizer/: __init__.py  adagrad.py  base.py  momentum.py  nesterov_momentum.py  sgd.py
src/first_order_optim/scheduler/: __init__.py  base.py  decay_rate_scheduler.py  exponential_decay_scheduler.py  step_decay_scheduler.py
src/first_order_optim/utils/: __init__.py  trainer.py
utils/: trainer.py
