[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "first-order-optim"
version          = "0.0.1"
description      = "First-order optimisation playground"
requires-python  = ">=3.12"
dependencies     = [
  "numpy",
  "matplotlib",
]

# Optional groups of dependencies
[project.optional-dependencies]
# for running/editing the Jupyter notebooks
notebook = [
  "jupyterlab",
  "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where   = ["src"]
exclude = ["tests*", "docs*"]
